fix too small line-height

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -46,8 +46,7 @@
 .archive__item-title {
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
-  line-height: initial;
-  overflow: hidden;
+  line-height: 1.3;
   text-overflow: ellipsis;
 
   a[rel="permalink"]::before {
@@ -60,7 +59,6 @@
   }
   a {
     display:flex;
-    margin-bottom: 2px;
   }
   a:hover {
     text-decoration: underline;
